@@ -49,7 +49,7 @@ libguile_la_SOURCES =							 \
     print.c procprop.c procs.c random.c read.c root.c scmsigs.c		 \
     script.c simpos.c smob.c sort.c srcprop.c stackchk.c stacks.c	 \
     stime.c strings.c strop.c strorder.c strports.c struct.c symbols.c	 \
-    tag.c throw.c variable.c vectors.c version.c vports.c weaks.c	 \
+    tag.c throw.c values.c variable.c vectors.c version.c vports.c weaks.c \
     gc_os_dep.c properties.c
 
 DOT_X_FILES =								\
@@ -64,7 +64,7 @@ DOT_X_FILES =								\
     procs.x random.x read.x root.x scmsigs.x				\
     script.x simpos.x smob.x socket.x sort.x srcprop.x stackchk.x	\
     stacks.x stime.x strings.x strop.x strorder.x strports.x struct.x	\
-    symbols.x tag.x throw.x variable.x vectors.x			\
+    symbols.x tag.x throw.x values.x variable.x vectors.x		\
     version.x vports.x weaks.x properties.x
 
 EXTRA_DOT_X_FILES = debug-malloc.x filesys.x net_db.x posix.x ramap.x	\
@@ -83,8 +83,9 @@ DOT_DOC_FILES =								  \
     procprop.doc procs.doc random.doc read.doc root.doc scmsigs.doc	  \
     script.doc simpos.doc smob.doc socket.doc sort.doc srcprop.doc	  \
     stackchk.doc stacks.doc stime.doc strings.doc strop.doc strorder.doc  \
-    strports.doc struct.doc symbols.doc tag.doc throw.doc variable.doc	  \
-    vectors.doc version.doc vports.doc weaks.doc properties.doc
+    strports.doc struct.doc symbols.doc tag.doc throw.doc values.doc	  \
+    variable.doc vectors.doc version.doc vports.doc weaks.doc             \
+    properties.doc
 
 EXTRA_DOT_DOC_FILES = @EXTRA_DOT_DOC_FILES@
 
@@ -129,7 +130,8 @@ modinclude_HEADERS =							 \
     ramap.h read.h root.h scmsigs.h validate.h script.h simpos.h	 \
     smob.h socket.h sort.h srcprop.h stackchk.h stacks.h stime.h	 \
     strings.h strop.h strorder.h strports.h struct.h symbols.h tag.h	 \
-    tags.h throw.h unif.h variable.h vectors.h version.h vports.h	 \
+    tags.h throw.h unif.h values.h variable.h vectors.h version.h        \
+    vports.h                                                             \
     weaks.h snarf.h threads.h coop-defs.h fluids.h iselect.h		 \
     debug-malloc.h properties.h
 
